Setimo Commit: Arrumando index

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
     <main>
         <section id="hero">
-            <img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?auto=format&fit=crop&w=900&q=80"
+            <img src="Corte.png"
                 alt="Barbearia" class="hero-img">
             <div class="hero-text">
                 <h2>Bem-vindo à Barbearia Imperium</h2>
