Ultimo Commit: Alterações Finais, propostas do professor.

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     </div>
                 </div>
                 <div class="barber-card">
-                    <img src="Carlos.jpg" alt="Barbeiro Carlos">
+                    <img src="Carlos.jpg" alt="Barbeiro Pedro">
                     <div>
                         <span class="barber-name">Carlos</span>
                         <p>Focado em cortes infantis e estilo moderno.</p>
